--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-documentation": "4.0.0-beta.0",
+    "@strapi/plugin-graphql": "4.0.0-beta.0",
     "@strapi/plugin-i18n": "4.0.0-beta.0",
     "@strapi/plugin-users-permissions": "4.0.0-beta.0",
     "@strapi/strapi": "4.0.0-beta.0",
